--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,16 +1,26 @@
-    {{ partial "head.html" . }}
+    {{ partial "header.html" . }}
     <body>
+        <header class="article-head">
+            <div class="main-title">
+                <h1><a href="{{ .Site.BaseURL }}">{{ .Site.Params.maintitle }}</a></h1>
+            </div>
+        </header>
 
         <section id="wrapper">
-            <article class="post">
-                <header>
-                    <h1>{{ .Title }}</h1>
-                    <h2 class="headline">{{ .Date.Format "January 2, 2006" }}</h2>
-                </header>
-                <section id="post-body">
-                    {{ .Content }}
-                </section>
-            </article>
+            <div class="container">
+                <div class="col-md-offset-2 col-md-8">
+                    <article class="post">
+                        <header>
+                            <h4>Шаг {{ .Params.step }}</h4>
+                            <h1>{{ .Title }}</h1>
+                            <h3>{{ .Description }}</h3>
+                        </header>
+                        <section id="post-body">
+                            {{ .Content }}
+                        </section>
+                    </article>
+                </div>
+            </div>
         </section>
     </body>
 </html>
