--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,6 @@
 	{{ partial "header.html" . }}
 	<body>
-        <header class="main-head" style="background-image: url(image/header-bg.jpeg)">
+        <header class="main-head" style="">
             <div class="main-title">
                 <h1>{{ .Site.Params.maintitle }}</h1>
                 <h2>{{ .Site.Params.mainsubtitle | markdownify }}</h2>
@@ -16,26 +16,26 @@
                     </div>
                     <div class="col-xs-6 col-sm-2 experiment-step">
                         <p>Шаг 1</p>
-                        <h4><a>Hello world</a></h4>
-                        <p>Описание создания первой версии блога</p>
+                        <h4><a href="/project/lispress/1-helloworld/">Hello world</a></h4>
+                        <p>Создание первой версии блога с помощью Ghost</p>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="books">
+        <div class="rubric">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-4">
+                    <div class="col-md-4">
                         <h2>Любимые книги</h2>
                     </div>
-                    <div class="col-xs-6 col-sm-3 book">
+                    <div class="col-xs-6 col-md-3 book">
                         <img src="image/loer-zhizn.jpg">
                         <p>Жизнь на полной мощности</p>
                         <p><small>Джим Лоэр и Тони Шварц</small></p>
                         <p><small><a href="http://www.mann-ivanov-ferber.ru/">Манн, Иванов и Фербер</a>, 2016</small></p>
                     </div>
-                    <div class="col-xs-6 col-sm-3 book">
+                    <div class="col-xs-6 col-md-3 book">
                         <img src="image/ries-lean-startup.jpg">
                         <p>Бизнес с нуля</p>
                         <p><small>Эрик Рис</small></p>
@@ -45,7 +45,7 @@
             </div>
         </div>
 
-        <div>
+        <div class="rubric">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-4">
