Gulp repairment, retina settings, new mark style

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -10,14 +10,14 @@
         <div class="experiment">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-4 experiment-title">
+                    <div class="col-md-4 experiment-title">
                         <h4>Эксперимент</h2>
                         <h2>Создание блога</h2>
                     </div>
-                    <div class="col-xs-6 col-sm-2 experiment-step">
+                    <div class="col-xs-6 col-md-2 experiment-step">
                         <p>Шаг 1</p>
-                        <h4><a href="/project/lispress/1-helloworld/">Hello world</a></h4>
-                        <p>Создание первой версии блога с помощью Ghost</p>
+                        <h4><a href="/project/lispress/1-hypothesis/">Гипотезы</a></h4>
+                        <p>Для чего нужна ещё одна платформа для блогов?</p>
                     </div>
                 </div>
             </div>
@@ -63,5 +63,6 @@
                 </div>
             </div>
         </div>
+        {{ partial "footer.html" . }}
     </body>
 </html>
