--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -22,5 +22,7 @@
                 </div>
             </div>
         </section>
+        
+        {{ partial "footer.html" . }}
     </body>
 </html>
