--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -56,6 +56,7 @@ h4
 	min-height: 350px
 	text-align: center
 	background-image: url(/image/header-bg.jpeg)
+	background-image: -webkit-image-set(url(/image/header-bg.jpeg) 1x, url(/image/header-bg-2x.jpeg) 2x);
 	vertical-align: center
 	background-size: cover
 	background-position: 50% 20%
@@ -119,7 +120,7 @@ h4
 		box-shadow: 0.1px 0.1px 0.1px
 
 .post
-	font-size: 16px
+	font-size: 17px
 	header
 		margin-top: 2em
 		margin-bottom: 5em
@@ -132,6 +133,8 @@ h4
 		h3
 		 	margin-top: 0
 
+mark
+	background-color: rgba(249, 170, 39, 0.43)
 
 //ALWAYS END
 @import "media"
