--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -14,6 +14,12 @@
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px)
 	
+	.main-head
+		h1
+			font-size: 2em
+		h2
+			font-size: 1.2em
+
 	/*Disable Animation on Mobile Devices*/
 	.animated
 		/*CSS transitions*/
