--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -9,16 +9,31 @@
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 992px)
 	/**/
+	.factoid
+		position: relative
+		width: auto
+		left: auto
+		margin-left: 2em
+		font-size: 1em
+
+	.factoid-bottom
+		bottom: auto
 
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px)
-	
+
+	.path
+		margin-top: 3em
+		p
+			font-size: 1em
+
 	.main-head
 		h1
-			font-size: 2em
+			font-size: 1.8em
 		h2
 			font-size: 1.2em
+
 
 	/*Disable Animation on Mobile Devices*/
 	.animated
@@ -73,18 +88,7 @@
 @media only screen and (min-width : 992px)
 	/**/
 
-	.main-head
-		min-height: 400px
-	.article-head
-		min-height: 200px
-
 
 /* Large Devices, Wide Screens */
 @media only screen and (min-width : 1200px)
 	/**/
-
-	.main-head
-		min-height: 500px
-	.article-head
-		min-height: 200px
-
