--- a/src/sass/header.sass
+++ b/src/sass/header.sass
@@ -2,12 +2,14 @@
 @import "vars.sass"
 
 body
-	font-size: 15px
+	font-size: 20px
 	min-width: 320px
 	position: relative
 	line-height: 1.325
 	font-family: "Pt Sans", $helvetica
 	overflow-x: hidden
+	color: #444
+	background: #FFFBFC
 
 .hidden
 	display: none
