--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -34,11 +34,14 @@ body
 	height: 100%
 	max-height: 100%
 
-h1, 
-h2, 
-h3,
-h4
+h1,
+h2,
+h3
 	font-weight: normal
+
+h4
+	font-weight: bold
+	font-size: 1em
 
 .before
 	content: ''
@@ -50,42 +53,32 @@ h4
 
 //Custom Styles Here
 .main-head
-	position: relative
-	width: 100%
-	color: #fff
-	min-height: 350px
 	text-align: center
-	background-image: url(/image/header-bg.jpeg)
-	background-image: -webkit-image-set(url(/image/header-bg.jpeg) 1x, url(/image/header-bg-2x.jpeg) 2x);
-	vertical-align: center
-	background-size: cover
-	background-position: 50% 20%
-	&::before
-		@extend .before
-		opacity: .50
-		background-color: #000
 	h1,
 	h2
 		margin: 0
 		position: relative
 		line-height: 1.325em
 	h1
-		padding-top: 150px
+		padding-top: 70px * $phi
+		padding-bottom: 70px
 		font-size: 3em
-		letter-spacing: 1.5px
+		letter-spacing: 3px
+		text-transform: uppercase
+		color: #4442C2
 
 .article-head
 	@extend .main-head
-	min-height: 200px
-	h1
-		padding-top: 80px
-	a,
+	a
+		color: #4442C2
 	a:hover,
 	a:active,
 	a:focus
-		color: inherit
+		color: #16148D
+		text-decoration: none
 
 .experiment
+	margin-bottom: 70px / $phi
 	a
 		text-decoration: none
 	h2,
@@ -93,37 +86,54 @@ h4
 		margin-top: 0
 		line-height: 1em
 	p
-		margin-bottom: 0
+		margin-top: 0
+
+.experiment-running
+	background-color: rgba(115, 229, 255, 0.12)
 
 .experiment-step
+	min-height: 150px
+	padding-bottom: 1.33em
 	p
 		margin-top: 1.33em
+		margin-bottom: 0
 	h4
+		font-weight: normal
 		margin-top: 0
 		line-height: 1em
+	a
+		color: #4442C2
 
 .experiment-title
+	a
+		color: #4442C2
+	a:hover,
+	a:active,
+	a:focus
+		color: #16148D
 	h4
 		margin-bottom: 0
-		color: #F5A623
 
 .rubric
 	margin-top: 3em
 
 .book
+	margin-top: 1.33em
+	margin-bottom: 2em
 	p
 		margin-top: 0
 		margin-bottom: 0
 	img
 		width: 80%
 		max-width: 200px
-		box-shadow: 0.1px 0.1px 0.1px
+		box-shadow: 0 0 7px rgba(0,0,0,.36)
+		margin-bottom: 30px
 
 .post
-	font-size: 17px
+	margin-bottom: 2em
 	header
 		margin-top: 2em
-		margin-bottom: 5em
+		margin-bottom: 1.5em
 
 		h1
 		 	margin-top: 0
@@ -133,8 +143,80 @@ h4
 		h3
 		 	margin-top: 0
 
-mark
-	background-color: rgba(249, 170, 39, 0.43)
+.post-body
+	margin-bottom: 2em
+	ul
+	 list-style: none
+	 margin-top: -1em
+	 margin-left: 0
+	 padding-left: 1em
+	 text-indent: -1em
+
+	ul li:before
+	 content: "— "
+
+.factoid
+	width: 180px
+	left: 100%
+	margin-left: 4em
+	position: absolute
+	font-size: 0.85em
+
+.factoid-bottom
+ 	bottom: 1em
+
+.factoid-top
+ 	top: 1em
+
+.summary
+	margin: 1em -1em
+	padding: 0.05em 1em
+	background-color: rgba(245, 171, 35, 0.22)
+
+.blog-info
+	margin: 1em -1em
+	padding: 0.05em 1em
+	background-color: rgba(68, 66, 194, 0.17)
+
+.table-of-content
+	margin-bottom: 3.3em
+	h3
+		margin-bottom: 0
+	ul
+		list-style-type: none
+		list-style-position: 0
+		padding: 0 1em
+		margin: 0
+
+.path
+	margin-top: 1em
+	margin-bottom: 2em
+	h4
+		margin-top: 0
+		margin-bottom: 0.85em
+	p
+		margin-top: 0
+		margin-bottom: 0.33em
+		font-size: 0.85em
+
+footer
+	margin-top: 4em
+
+// Mark colors
+mark, .orange
+	background-color: rgba(245, 171, 35, 0.22)
+
+.blue
+	background-color: rgba(24, 197, 236, 0.17)
+
+.green
+	background-color: rgba(17, 214, 14, 0.18)
+
+.purple
+	background-color: rgba(245, 35, 209, 0.17)
+
+img
+	width: 100%
 
 //ALWAYS END
 @import "media"
